# space_cepheus_ws

./: .dockerignore  LICENSE  Makefile  README.md  SECURITY.md  STYLE_GUIDE.md  log.txt
.devcontainer/: devcontainer.json
config/mocap_vicon/configs/: NTUA_CSL_2025.Options.xml  NTUA_CSL_2025.System  NTUA_CSL_2025.ViewType.xml
config/mocap_vicon/objects/: cepheus_base.vsk  cepheus_endeffector.vsk  target.vsk
docker/: .env.example  Docker_README.md  Dockerfile  compose.yml
docs/: mini_one_pro_ft_sensor_setup_usage.md
docs/101/: daily_git_workflow_short.md
docs/fts_bota/: config_defense_bota_mini_ft.md  setup_101_bota_mini_ft.md
docs/imu_xsens/: setup_101_xsens_sirius.md
docs/motor_driver_maxon_wip/: config_defense_ESCON_36_2.md
src/cepheus_bringup/: CMakeLists.txt  package.xml
src/cepheus_control/: CMakeLists.txt  package.xml
src/cepheus_robot/: CMakeLists.txt
src/cepheus_robot/src/: includes.h  (+15 more)
src/exp_JointSpace/: CMakeLists.txt  package.xml
src/exp_cartesian_space_new/: CMakeLists.txt  package.xml
src/exp_joint_space_new/: CMakeLists.txt  matlab_MBPD.txt  package.xml
src/exp_joint_space_new/include/exp_JointSpace/: exp_JointSpace.h
src/exp_joint_space_new/launch/: exp_JointSpace.launch
src/exp_joint_space_new/src/: exp_JointSpace_node.cpp
src/hw_interface_new/: CMakeLists.txt  package.xml
tools/: Tools_README.md
tools/plotting/: bag2mat_plotter.py
tools/setup/: 99-cepheus-peripherals.rules  robot_env.sh  robot_env_old.sh  ros_env.sh  ros_env_new.sh
tools/sync/: autosync_exp
tools/terminator_setup/: cepheus_lab.desktop  config
(+60 files in other folders)
